# mopro

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  Config.toml  HALO2.md  LICENSE-MIT  README.md  _typos.toml  anon-aadhaar-config.toml  circom_witnesscalc_test.sh  config-android-ci.toml  config-ci.toml  config-complex.toml  config-example-android.toml  config-example.toml  config-halo2.toml
ark-zkey/: Cargo.toml  LICENSE-MIT  README.md
ark-zkey/src/: README.md  lib.rs
circom-prover/: Cargo.toml  README.md  build.rs
circom-prover/.cargo/: config.toml
circom-prover/src/: lib.rs  prover.rs  witness.rs
circom-prover/src/prover/: ark_circom.rs  arkworks.rs  circom.rs  ethereum.rs  rapidsnark.rs  serialization.rs
circom-prover/test-vectors/: multiplexer.wasm  multiplexer_final.zkey  mux.wasm  mux.zkey
cli/: Cargo.toml  Config.toml  README.md
cli/src/: bindgen.rs  build.rs  config.rs  constants.rs  create.rs  init.rs  lib.rs  main.rs  print.rs  select.rs  style.rs  update.rs  utils.rs
cli/src/create/: android.rs  flutter.rs  ios.rs  react_native.rs  utils.rs  web.rs  write_toml.rs
cli/src/init/: adapter.rs  circom.rs  gnark.rs  halo2.rs  noir.rs  proving_system.rs  write_toml.rs
ffi/common/: Cargo.toml
ffi/common/src/: constants.rs  lib.rs  utils.rs
ffi/flutter/: Cargo.toml
ffi/flutter/src/: lib.rs
ffi/react-native/: Cargo.toml
ffi/react-native/src/: lib.rs
ffi/react-native/template/: tsconfig.json
ffi/uniffi/: Cargo.toml
ffi/uniffi/src/: android.rs  ios.rs  lib.rs
ffi/wasm/: Cargo.toml
ffi/wasm/src/: lib.rs
mopro-cli-example/: Cargo.toml  config.toml  mopro-config.toml
mopro-cli-example/src/: lib.rs
mopro-core/: .gitignore  Cargo.toml  README.md  build.rs  uniffi.toml  zarkkey-util.rs
mopro-core/benchmarks/gpu_explorations/: arkworks_pippenger_benchmark.txt  msm_bench.csv  msm_bench_rust_laptop.csv  msm_bench_swift_laptop.csv  trapdoor_benchmark.txt  trapdoor_benchmark_time.txt
mopro-core/examples/: circom.rs
mopro-core/examples/circom/: .gitignore  README.md  compile.sh
mopro-core/gpu_explorations/: Cargo.toml  README.md
mopro-core/gpu_explorations/benchmarks/: arkworks_pippenger_benchmark.txt  halo2curve_multicore_msm_benchmark.txt  halo2curve_singlecore_msm_benchmark.txt  metal_msm_benchmark.txt  trapdoor_benchmark.txt
mopro-core/gpu_explorations/src/: main.rs
mopro-core/src/: lib.rs  mopro_uniffi.udl
mopro-core/src/middleware/: circom.rs  mod.rs
mopro-ffi/: Cargo.toml  Makefile  README.md  build.rs  build_bindings.sh  rust-toolchain.toml  test.mjs
mopro-ffi/.cargo/: config.toml
mopro-ffi/SwiftBindings/: mopro.swift  moproFFI.h
mopro-ffi/rapidsnark/: README.md
mopro-ffi/rapidsnark/aarch64/: librapidsnark.dylib
mopro-ffi/src/: circom.rs  halo2.rs  lib.rs  mopro.udl  mopro_uniffi.udl  utils.rs  wasm.rs
mopro-ffi/src/adapter_stubs/: circom.rs  halo2.rs  mod.rs  noir.rs
mopro-ffi/src/adapters/: circom.rs  halo2.rs  mod.rs  noir.rs
mopro-ffi/src/app_config/: android.rs  constants.rs  flutter.rs  ios.rs  mod.rs  react_native.rs  sys_commands.rs  utils.rs  web.rs
mopro-ffi/src/ashlang/: mod.rs
mopro-ffi/src/bindings/: mod.rs  uniffi.rs  wasm_bindgen.rs
mopro-ffi/src/circom/: ethereum.rs  mod.rs  qap.rs  rapidsnark.rs  serialization.rs  utils.rs  zkey.rs  zkey_header.rs
mopro-ffi/src/gkr/: mod.rs
mopro-ffi/src/halo2/: mod.rs  serialization.rs
mopro-ffi/src/noir/: mod.rs
mopro-ffi/src/nova_scotia/: mod.rs
mopro-ffi/src/plonkish/: mod.rs
mopro-ffi/src/plonky2/: mod.rs
mopro-ffi/tests/: test_generated_bindings.rs  wasm.rs
mopro-ffi/tests/bindings/: test_kimchi.swift  test_mopro.kts  test_mopro.swift  test_mopro_dylib_witness.swift  test_mopro_gen_benchmarks_report.swift  test_mopro_gpu_benchmarks.swift  test_mopro_keccak.kts  test_mopro_keccak.swift  test_mopro_keccak2.kts  test_mopro_keccak2.swift  test_mopro_keccak_static.kts  test_mopro_rsa.kts  test_mopro_rsa.swift  test_mopro_rsa_static.swift
mopro-sample-app/: Cargo.toml  README.md  build.rs
mopro-sample-app/android/: settings.gradle.kts
mopro-sample-app/android/app/: build.gradle.kts
mopro-sample-app/ios/mopro-test/: ContentView.swift  mopro_testApp.swift
mopro-sample-app/ios/mopro-test.xcodeproj/: project.pbxproj
mopro-sample-app/src/: lib.rs
mopro-sample-app/src/halo2/: fibonacci.rs  gen_keys.rs  io.rs  mod.rs  serialisation.rs
mopro-sample-app/test-vectors/halo2/: fibonacci_pk  fibonacci_srs  fibonacci_vk
mopro-sample-app/tests/: test_generated_bindings.rs
mopro-sample-app/tests/bindings/: test_mopro.kts  test_mopro.swift
mopro-wasm/: Cargo.toml  README.md
mopro-wasm/.cargo/: config.toml
mopro-wasm/src/: lib.rs  wasm.rs
mopro-wasm/src/app_config/: web.rs
mopro-wasm/src/halo2/: gemini.rs  hyperplonk.rs  mod.rs  plonk.rs
mopro-wasm/tests/: wasm.rs
provers/circom-adapter/: Cargo.toml
provers/circom-adapter/src/: adapter.rs  lib.rs
provers/halo2-adapter/: Cargo.toml
provers/halo2-adapter/src/: adapter.rs  lib.rs
provers/noir-adapter/: Cargo.toml
provers/noir-adapter/src/: adapter.rs  lib.rs
research/gpu-exploration-app/core/: Cargo.toml
rust-swift-spike/rust-uniffi-example/: Cargo.toml  build.rs  uniffi.toml
rust-swift-spike/rust-uniffi-example/RustUniFFIExample.xcframework/: Info.plist
rust-swift-spike/rust-uniffi-example/src/: lib.rs  rust_uniffi_example.udl
scripts/regen-noir-fixtures/: Cargo.toml
test-app/: Cargo.toml
test-app/src/: lib.rs
test-e2e/: .gitignore  Cargo.toml  Config.toml  build.rs  expand.rs
test-e2e/.cargo/: config.toml
test-e2e/android/: .gitignore
test-e2e/ios/: noir_multiplier2.srs
test-e2e/mopro-wasm-lib/: Cargo.toml  rust-toolchain.toml
test-e2e/src/: lib.rs  mopro.udl  nova_scotia_types.rs
test-e2e/tests/: ashlang.rs  circom.rs  create_flutter.rs  create_react_native.rs  halo2.rs  noir.rs  plonky2.rs  test_generated_bindings.rs
test-e2e/web/: README.md  bs-config.js  index.html  index.js  package.json  serve.json  test_halo2.js  test_mopro.js
tests/: Cargo.toml  Config.toml  README.md  build.rs
tests/src/: lib.rs
(+699 files in other folders)
