[workspace]
members = ["mopro-ffi", "test-e2e", "cli", "mopro-wasm", "test-e2e/mopro-wasm-lib", "circom-prover"]
resolver = "2"
exclude = ["mopro-example-app"]

[workspace.dependencies]
plonk-fibonacci = { package = "plonk-fibonacci", git = "https://github.com/ElusAegis/halo2-fibonacci-sample", rev = "01963da" }
hyperplonk-fibonacci = { package = "hyperplonk-fibonacci", git = "https://github.com/ElusAegis/halo2-fibonacci-sample", rev = "01963da" }
gemini-fibonacci = { package = "gemini-fibonacci", git = "https://github.com/ElusAegis/halo2-fibonacci-sample", rev = "01963da" }

uniffi = { version = "=0.29.0" }
