[workspace]
members = [
    "core",
    "provers/circom-adapter",
    "provers/halo2-adapter",
    "provers/noir-adapter",
    "ffi/common",
    "ffi/uniffi",
    "ffi/wasm",
    "ffi/flutter",
    "ffi/react-native",
    "mopro-ffi",
    "cli",
    "tests",
]
resolver = "2"

[workspace.dependencies]
rust-witness = "0.1"

uniffi = { version = "=0.31.0" }
