[package]
name = "circom-prover"
version = "0.1.0"
edition = "2021"
description = "Circom prover is a Rust library for generating and verifying proofs for Circom circuits."
license = "MIT OR Apache-2.0"
repository = "https://github.com/zkmopro/mopro"
documentation = "https://zkmopro.org/"
homepage = "https://zkmopro.org/"
exclude = ["test-vectors/*"]

[lib]
name = "circom_prover"

[features]
default = ["rustwitness", "arkworks", "ethereum"]

# Witness Generation
rustwitness = ["rust-witness"]
witnesscalc = ["witnesscalc-adapter"]

# Proof Generation
arkworks = [
    "ark-serialize",
    "ark-ec",
    "ark-crypto-primitives",
    "ark-std",
    "ark-bn254",
    "ark-groth16",
    "ark-relations",
    "ark-ff",
    "ark-bls12-381",
    "ark-poly",
]
rapidsnark = []

ethereum = []

[dependencies]
num = { version = "0.4.0" }
num-traits = { version = "0.2.15", default-features = false }
num-bigint = { version = "0.4.3", default-features = false, features = [
    "rand",
] }
anyhow = "1.0.95"
rust-witness = { version = "0.1.2", optional = true }
witnesscalc-adapter = { version = "0.1.0", optional = true }
byteorder = { version = "1.0.0" }
uuid = { version = "1.9.1", features = ["v4"] }

# arkworks
ark-ec = { version = "=0.4.1", default-features = false, features = [
    "parallel",
], optional = true }
ark-ff = { version = "=0.4.1", default-features = false, features = [
    "parallel",
    "asm",
], optional = true }
ark-std = { version = "=0.4.0", default-features = false, features = [
    "parallel",
], optional = true }
ark-crypto-primitives = { version = "=0.4.0", optional = true }
ark-relations = { version = "0.4", default-features = false, optional = true }
ark-bls12-381 = { version = "0.4.0", optional = true }
ark-bn254 = { version = "=0.4.0", optional = true }
ark-serialize = { version = "=0.4.1", features = ["derive"], optional = true }
ark-groth16 = { version = "=0.4.0", default-features = false, features = [
    "parallel",
], optional = true }
ark-poly = { version = "=0.4.1", default-features = false, features = [
    "parallel",
], optional = true }
rand = { version = "0.8", features = ["std"] }

# ethereum
rayon = { version = "1.10.0" }
hex-literal = "0.4.1"

[dev-dependencies]
serde_json = "1.0.94"
hex-literal = "0.4.1"
