[package]
name = "mopro-cli-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
mopro = { git = "https://github.com/oskarth/mopro.git", package = "mopro-core" }
# mopro-core = { path = "../mopro-core", package = "mopro-core" }

# NOTE: For this to work we need dedicated package, not just workspace
# mopro = { path = "../" }

[patch.crates-io]
# NOTE: Forked wasmer to work around memory limits
# See https://github.com/wasmerio/wasmer/commit/09c7070
wasmer = { git = "https://github.com/oskarth/wasmer.git", rev = "09c7070" }
