[package]
name = "mopro-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["wasmer/dylib"]
halo2 = ["halo2_proofs", "halo2-circuit"]
dylib = []                  # NOTE: can probably remove this if we use env config instead
gpu-benchmarks = ["ark-ff", "metal", "objc", "proptest", "parallel"]
calc-native-witness = ["witness"] # experimental feature to calculate witness with witness graph
build-native-witness = ["witness/build-witness"] # only enable build-native-witness feature when building the witness graph
parallel = ["rayon", "ark-std/parallel"]

[dependencies]

### Halo2 dependencies
# TODO - resutructure the file to explicitly group all proof system dependencies
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2", tag = "v2023_04_20", features = [
    "dev-graph",
], optional = true }

# Temporary dependency on a example Halo2 circuit
halo2-circuit = { path = "examples/halo2/fibonacci", optional = true }
### Halo2 dependencies end


ark-circom = { git = "https://github.com/vimwitch/circom-compat.git" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ark-serialize = { version = "=0.4.1", features = ["derive"] }
num-bigint = { version = "=0.4.3", default-features = false, features = [
    "rand",
] }
instant = "0.1"
wasmer = { git = "https://github.com/oskarth/wasmer.git", rev = "09c7070" }
once_cell = "1.8"
ruint = { version = "1.10.0", features = ["rand", "serde", "ark-ff-04"] }

# ZKP generation
ark-ec = { version = "=0.4.1", default-features = false, features = [
    "parallel",
] }
ark-crypto-primitives = { version = "=0.4.0" }
ark-std = { version = "=0.4.0", default-features = false, features = [
    "parallel",
] }
ark-bn254 = { version = "=0.4.0" }
ark-groth16 = { version = "=0.4.0", default-features = false, features = [
    "parallel",
] }
ark-relations = { version = "0.4", default-features = false }
ark-zkey = { path = "../ark-zkey" }
witness = { git = "https://github.com/philsippl/circom-witness-rs.git", optional = true}

# Error handling
thiserror = "=1.0.39"
color-eyre = "=0.6.2"
criterion = "=0.3.6"

# GPU explorations
ark-ff = { version = "=0.4.1", default-features = false, optional = true, features = [
    "parallel",
] }
metal = { version = "=0.28.0", optional = true }
objc ={ version = "=0.2.4", optional = true }
proptest ={ version = "1.4.0", optional = true }

[build-dependencies]
color-eyre = "0.6"
enumset = "1.0.8"
wasmer = { git = "https://github.com/oskarth/wasmer.git", rev = "09c7070" }
toml = "0.8"
serde = "1.0"
serde_derive = "1.0"
witness = { git = "https://github.com/philsippl/circom-witness-rs.git", optional = true}

[dependencies.rayon]
version = "1"
optional = true
