[package]
name = "mopro-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["circom-default"]

## Halo2 features

# Halo2 dependencies
halo2 = ["halo2_proofs", "halo2-circuit"]

## Circom features

# Default features for circom
circom-default = ["circom"]
# Circom dependencies
circom = ["ark-circom", "ark-serialize", "num-bigint", "ruint", "ark-ec", "ark-crypto-primitives", "ark-std", "ark-bn254", "ark-groth16", "ark-relations", "ark-zkey"]
aadhaar-test = []

# Each additional feature must also reference the circom feature to make sure the dependencies are included
gpu-benchmarks = ["ark-ff", "metal", "objc", "proptest", "parallel", "circom"]
parallel = ["rayon", "ark-std/parallel", "circom"]

[dependencies]

rust-witness = { git = "https://github.com/zkmopro/rust-witness.git" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

once_cell = "1.8"
instant = "0.1"

# Error handling
thiserror = "=1.0.39"
color-eyre = "=0.6.2"
criterion = "=0.3.6"



## Halo2 dependencies
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2", tag = "v2023_04_20", features = [
    "dev-graph",
], optional = true }

# Temporary dependency on an example Halo2 circuit is overwritten by user provided circuit at build time
halo2-circuit = { path = "examples/halo2/fibonacci", optional = true }


## Circom dependencies
ark-circom = { git = "https://github.com/zkmopro/circom-compat.git", branch = "wasm-delete", optional = true }
ark-serialize = { version = "=0.4.1", features = ["derive"], optional = true }
num-bigint = { version = "=0.4.3", default-features = false, features = [
    "rand",
], optional = true }

ruint = { version = "1.10.0", features = ["rand", "serde", "ark-ff-04"], optional = true }

# ZKP generation
ark-ec = { version = "=0.4.1", default-features = false, features = [
    "parallel",
], optional = true }
ark-crypto-primitives = { version = "=0.4.0", optional = true }
ark-std = { version = "=0.4.0", default-features = false, features = [
    "parallel",
], optional = true }
ark-bn254 = { version = "=0.4.0", optional = true }
ark-groth16 = { version = "=0.4.0", default-features = false, features = [
    "parallel",
], optional = true }
ark-relations = { version = "0.4", default-features = false, optional = true }
ark-zkey = { path = "../ark-zkey", optional = true }


# GPU explorations
ark-ff = { version = "=0.4.1", default-features = false, optional = true, features = [
    "parallel",
] }
metal = { version = "=0.28.0", optional = true }
objc = { version = "=0.2.4", optional = true }
proptest = { version = "1.4.0", optional = true }
paste = "1.0.15"

[build-dependencies]
rust-witness = { git = "https://github.com/zkmopro/rust-witness.git" }
color-eyre = "0.6"
enumset = "1.0.8"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"

[dependencies.rayon]
version = "1"
optional = true
