[package]
name = "mopro-ffi"
version = "0.3.1-alpha.0"
edition = "2021"
description = "Mopro is a toolkit for ZK app development on mobile. Mopro makes client-side proving on mobile simple."
license = "MIT OR Apache-2.0"
repository = "https://github.com/zkmopro/mopro"
documentation = "https://zkmopro.org/"
homepage = "https://zkmopro.org/"
exclude = ["target/*"]

[lib]
name = "mopro_ffi"

[features]
default = ["build"]

uniffi = []
uniffi-tests = ["uniffi", "uniffi/bindgen-tests"]

build = ["toml", "uuid", "camino"]
no_uniffi_exports = []

[dependencies]
uniffi = { workspace = true, features = ["bindgen"] }
toml = { version = "0.8.22", optional = true }

# Error handling
thiserror = "2.0.12"
anyhow = "1.0.86"
color-eyre = "0.6.3"

uuid = { version = "1.9.1", features = ["v4"], optional = true }
camino = { version = "1.1.9", optional = true }

[build-dependencies]
uuid = { version = "1.9.1", features = ["v4"] }
camino = "1.1.9"