[package]
name = "mopro-ffi"
version = "0.3.2"
edition = "2021"
description = "Mopro is a toolkit for ZK app development on mobile. Mopro makes client-side proving on mobile simple."
license = "MIT OR Apache-2.0"
repository = "https://github.com/zkmopro/mopro"
documentation = "https://zkmopro.org/"
homepage = "https://zkmopro.org/"
exclude = ["target/*"]

[lib]
name = "mopro_ffi"

[features]
default = ["build"]

uniffi = ["dep:uniffi", "fs_extra"]
uniffi-tests = ["uniffi", "uniffi/bindgen-tests"]

flutter = ["toml", "flutter_rust_bridge"]

build = ["toml", "uuid", "camino"]
no_uniffi_exports = []

[dependencies]
# UniFFI
uniffi = { workspace = true, features = ["bindgen"], optional = true }
toml = { version = "0.8.22", optional = true }

# Flutter
flutter_rust_bridge = { version = "=2.11.1", optional = true }

# Error handling
thiserror = "2.0.12"
anyhow = "1.0.86"
color-eyre = "0.6.3"

uuid = { version = "1.9.1", features = ["v4"], optional = true }
camino = { version = "1.1.9", optional = true }
fs_extra = { version = "1.2.0", optional = true }

[build-dependencies]
uuid = { version = "1.9.1", features = ["v4"] }
camino = "1.1.9"