[package]
name = "mopro-ffi"
version = "0.3.3"
edition = "2021"
description = "Mopro is a toolkit for ZK app development on mobile. Mopro makes client-side proving on mobile simple."
license = "MIT OR Apache-2.0"
repository = "https://github.com/zkmopro/mopro"
documentation = "https://zkmopro.org/"
homepage = "https://zkmopro.org/"
exclude = ["target/*"]

[lib]
name = "mopro_ffi"

[features]
default = ["build"]

uniffi = ["dep:uniffi", "fs_extra"]
uniffi-tests = ["uniffi", "uniffi/bindgen-tests"]

flutter = ["toml", "flutter_rust_bridge"]

wasm = [
    "console_error_panic_hook",
    "getrandom",
    "serde-wasm-bindgen",
    "wasm-bindgen",
    "wasm-bindgen-console-logger",
    "wasm-bindgen-futures",
    "wasm-bindgen-rayon",
    "uuid/js",
]

build = ["toml", "uuid", "camino"]
no_uniffi_exports = []

[dependencies]
# UniFFI
uniffi = { workspace = true, features = ["bindgen"], optional = true }
toml = { version = "0.8.22", optional = true }

# Flutter
flutter_rust_bridge = { version = "=2.11.1", optional = true }

# Error handling
thiserror = "2.0.12"
anyhow = "1.0.86"
color-eyre = "0.6.3"

uuid = { version = "1.9.1", features = ["v4"], optional = true }
camino = { version = "1.1.9", optional = true }
fs_extra = { version = "1.2.0", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = { version = "0.1.7", optional = true }
getrandom = { version = "0.2.15", features = ["js"], optional = true }
serde-wasm-bindgen = { version = "0.6.5", optional = true }
wasm-bindgen = { version = "0.2.95", features = [
    "serde-serialize",
], optional = true }
wasm-bindgen-console-logger = { version = "0.1.1", optional = true }
wasm-bindgen-futures = { version = "0.4.47", optional = true }
wasm-bindgen-rayon = { version = "1.2.2", features = ["no-bundler"], optional = true }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = { version = "0.3.42" }

[build-dependencies]
uuid = { version = "1.9.1", features = ["v4"] }
camino = "1.1.9"

[dev-dependencies]
plonk-fibonacci = { package = "plonk-fibonacci", git = "https://github.com/sifnoc/plonkish-fibonacci-sample.git" }
hyperplonk-fibonacci = { package = "hyperplonk-fibonacci", git = "https://github.com/sifnoc/plonkish-fibonacci-sample.git" }
gemini-fibonacci = { package = "gemini-fibonacci", git = "https://github.com/sifnoc/plonkish-fibonacci-sample.git" }
rand = "0.8.5"
