[workspace]
[package]
name = "mopro-app"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "ios"

[[bin]]
name = "generate_keys"
path = "src/halo2/gen_keys.rs"

[features]

[dependencies]
mopro = { path = "../mopro-ffi", features = ["halo2", "circom"] }
uniffi = { version = "0.28" }

# Halo2 dependency crates


# Circom dependency crates
rust-witness = { git = "https://github.com/vimwitch/rust-witness.git" }
num-bigint = "0.4.0"

# Crates required for macro expansion
thiserror = "^1.0"
paste = "1.0"

# Halo2 Sample App dependencies
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2", tag = "v2023_04_20", features = [
    "dev-graph",
] }
plotters = { version = "0.3.0", optional = true }
tabbycat = { version = "0.1", features = ["attributes"], optional = true }
rand = "0.8.5"
once_cell = "1.19.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.119"
bincode = "1.3.3"

[build-dependencies]

rust-witness = { git = "https://github.com/vimwitch/rust-witness.git" }

[dev-dependencies]
uniffi = { version = "0.28", features = ["bindgen-tests"] }