[package]
name = "mopro-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "cdylib"]

[features]
plonk = ["plonk-fibonacci"]
hyperplonk = ["hyperplonk-fibonacci"]
gemini = ["gemini-fibonacci"]
keccak = ["halo2-keccak-256"]
rsa = ["mopro-halo2-rsa"]


[dependencies]
plonk-fibonacci = { package = "plonk-fibonacci", git = "https://github.com/sifnoc/plonkish-fibonacci-sample.git", optional = true }
hyperplonk-fibonacci = { package = "hyperplonk-fibonacci", git = "https://github.com/sifnoc/plonkish-fibonacci-sample.git", optional = true }
gemini-fibonacci = { package = "gemini-fibonacci", git = "https://github.com/sifnoc/plonkish-fibonacci-sample.git", optional = true }
halo2-keccak-256 = { git = "https://github.com/KimiWu123/halo2-keccak-stable.git", branch = "wasm32", optional = true }
mopro-halo2-rsa = { git = "https://github.com/KimiWu123/halo2-rsa-mopro.git", branch = "wasm32", optional = true }
rand = "0.8.5"

[target.wasm32-unknown-unknown.dependencies]
console_error_panic_hook = "0.1.7"
getrandom = { version = "0.2.15", features = ["js"] }
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = { version = "0.2.95", features = ["serde-serialize"] }
wasm-bindgen-console-logger = "0.1.1"
wasm-bindgen-futures = "0.4.47"
wasm-bindgen-rayon = { version = "1.2.2", features = ["no-bundler"] }
wasm-bindgen-test = "0.3.42"
