[package]
name = "test-e2e"
version = "0.1.0"
edition = "2021"

[lib]
name = "mopro_bindings"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "ios"

[[bin]]
name = "android"

[[bin]]
name = "web"

[dependencies]
mopro-ffi = { path = "../mopro-ffi", features = [
    "uniffi",
    "halo2",
    "circom",
    "noir",
    "witnesscalc",
    "rapidsnark",
] }
mopro-wasm = { path = "../mopro-wasm" }

# Circom dependencies
rust-witness = "0.1"
witnesscalc-adapter = "0.1"

# Halo2 dependencies
halo2-keccak-256 = { git = "https://github.com/ElusAegis/halo2-keccak-stable.git" }
plonk-fibonacci = { workspace = true }
hyperplonk-fibonacci = { workspace = true }
gemini-fibonacci = { workspace = true }
thiserror = "2.0.12"

[build-dependencies]
mopro-ffi = { path = "../mopro-ffi" }

# Circom dependencies
rust-witness = "0.1"
witnesscalc-adapter = "0.1"

[dev-dependencies]
mopro-ffi = { path = "../mopro-ffi", features = ["uniffi-tests"] }
