[package]
name = "tests"
version = "0.1.0"
edition = "2021"

[build-dependencies]
mopro-wasm-backend          = { path = "../ffi/wasm" }
mopro-uniffi-backend        = { path = "../ffi/uniffi" }
mopro-flutter-backend       = { path = "../ffi/flutter" }
mopro-react-native-backend  = { path = "../ffi/react-native" }
