[package]
name = "mopro-build-common"
version = "0.1.0"
edition = "2021"
description = "Shared build-pipeline types and utilities for mopro FFI backends"
license = "MIT OR Apache-2.0"
repository = "https://github.com/zkmopro/mopro"

[dependencies]
anyhow  = "1.0"
color-eyre = "0.6"
uuid    = { version = "1.9", features = ["v4"] }
toml    = "0.8"
