[package]
name = "mopro-flutter-backend"
version = "0.1.0"
edition = "2021"
description = "mopro build-pipeline backend: Flutter bindings via flutter_rust_bridge codegen"
license = "MIT OR Apache-2.0"
repository = "https://github.com/zkmopro/mopro"

[dependencies]
mopro-build-common = { path = "../common" }
anyhow = "1.0"
toml   = "0.8"
